Fixing overflow of about page and project page

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,17 +1,19 @@
 .about_section_title,
-.about_section_subtitle{
+.about_section_subtitle {
     text-align: center;
     margin-top: 0.375rem;
 }
 
-.about_container{
-    padding: 2rem 25rem;
+.about_container {
+    display: grid;
+    left: 10px;
+    grid-template-columns: auto auto;
+    gap: 3rem;
+    margin-top: 70px;
 }
 
- .about_data {
-    position:relative;
-    left:400px;
-    width:600px;
+.about_data_right {
+    width: 600px;
     height: 300px;
     bottom: 450px;
     padding: 1.875rem;
@@ -20,189 +22,223 @@
     border-radius: var(--border-radius);
     column-gap: 1.875rem;
     align-items: flex-start;
-    position:relative;
     text-wrap: wrap;
- }
- 
- .about_data::before {
-     content:'';
-     width: 0;
-     height: 0;
-     border-top:10px solid transparent;
-     border-bottom: 10px solid transparent;
-     border-right: 15px solid var(--container-color);
-     position: absolute;
-     left: -0.93rem;
-     top: 20%;
- }
- 
+}
+
 .about_info {
-    width:600px;
-    position:relative;
+    width: 600px;
+    position: relative;
     justify-self: center;
-    
- }
- .about_description {
+
+}
+
+.about_data_left {
+    justify-self: right;
+}
+
+.about_description {
     padding-top: 10px;
-     text-align: justify;
-     margin-bottom: 1rem ;
-     width: 530px;
- }
- 
- .button {
+    text-align: justify;
+    margin-bottom: 1rem;
+    width: 530px;
+}
+
+.button {
     margin-top: 70px;
-    position:relative;
- }
- 
- .about_img{
-    position:relative;
+    position: relative;
+}
+
+.about_img {
+    position: relative;
     width: 300px;
     height: 300px;
     border-radius: 50%;
     /*box-shadow: 0px 0px 0px 15px rgb(255 77 97 /25%);*/
-    
- }
- 
- 
- 
- /*=========================== contact icons ===========================================*/
- 
- .Contact {
-    position:relative;
-    left: 60px;
-     display:flex;
-     column-gap: 1.75rem;
- }
- 
- .contact_linkedin {
-     color: var(--title-color);
-     font-size: 1.3rem;
-     transition: 0.3s;
- }
- .contact_linkedin:hover {
-     color: var(--first-color);
- }
- .contact_github {
-     color: var(--title-color);
-     font-size: 1.3rem;
-     transition: 0.3s;
- }
- 
- .contact_github:hover {
-     color:var(--first-color);
- }
- .contact_pixiv {
-     color: var(--title-color);
-     font-size: 1.3rem;
-     transition: 0.3s;
- }
- 
- .contact_pixiv:hover {
-     color:var(--first-color);
- }
- 
- .contact_email {
-     color: var(--title-color);
-     font-size: 1.3rem;
-     transition: 0.3s;
- }
- 
- .contact_email:hover {
-     color:var(--first-color);
- }
- 
- /*============ BREAKPOINTS ==============*/
- /* LARGER DEVICES */
- @media screen and (max-width: 1024px){  
-    .about_container{
-        grid-template-columns: 1fr;
+
+}
+
+
+
+/*=========================== contact icons ===========================================*/
+
+.Contact {
+    position: relative;
+    display: grid;
+    column-gap: 1.75rem;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, 1.3rem);
+}
+
+.contact_linkedin {
+    color: var(--title-color);
+    font-size: 1.3rem;
+    transition: 0.3s;
+}
+
+.contact_linkedin:hover {
+    color: var(--first-color);
+}
+
+.contact_github {
+    color: var(--title-color);
+    font-size: 1.3rem;
+    transition: 0.3s;
+}
+
+.contact_github:hover {
+    color: var(--first-color);
+}
+
+.contact_pixiv {
+    color: var(--title-color);
+    font-size: 1.3rem;
+    transition: 0.3s;
+    margin-left: 6px;
+}
+
+.contact_pixiv:hover {
+    color: var(--first-color);
+}
+
+.contact_email {
+    color: var(--title-color);
+    font-size: 1.3rem;
+    transition: 0.3s;
+}
+
+.contact_email:hover {
+    color: var(--first-color);
+}
+
+/*============ BREAKPOINTS ==============*/
+/* LARGER DEVICES */
+@media screen and (max-width: 1024px) {
+
+    .about_description {}
+
+    .about_container {
+        display: grid;
+        padding: 2rem 10rem;
+        left: 10px;
+        grid-template-columns: repeat(auto-fit, 300px);
         justify-content: center;
-        row-gap: 2.5rem;
-    }
-    .Contact{
-        font-size: 1.125rem;
-        width: 250px;
-        justify-self: center;
-        
     }
 
-    .about_img{
+    .Contact {
+        font-size: 1.125rem;
+        justify-self: center;
+
+    }
+
+    .about_img {
         justify-self: center;
     }
-    .about_data{
+
+    .about_data_right {
         text-align: center;
-        left:3rem;
-        bottom: 5rem;
-        position:relative;
         justify-self: center;
     }
-    .about_data::before{
-        display: none;
-    }
-    .about_description{
-        padding: 0 5rem;
-        margin-bottom: 2rem;
-    }
+
     .about_button {
         margin-right: 100px;
         margin-top: 30px;
-        position:relative;
-     }
+        position: relative;
+    }
 }
- /* MEDIUM DEVICES */
 
- @media screen and (max-width: 768px){  
-    .about_container{
-        padding: 2rem 10rem;
-        left:10px;
-        grid-template-columns: 350px;
-    }
-    .about_data::before{
+/* MEDIUM DEVICES */
 
-        left:47%;
-    }
-    .about_button{
+@media screen and (max-width: 768px) {
+
+    .about_button {
         margin-right: 100px;
 
     }
-    .about_data{
+
+    .about_data_right {
         grid-template-columns: 1fr;
         row-gap: 1.875rem;
 
     }
-    .about_img{
+
+    .about_img {
         justify-self: center;
     }
-    .Contact{
+
+    .Contact {
         justify-self: center;
         margin-top: 0;
     }
- }
- 
- @media screen and (max-width: 576px){  
-    .about_container{
-        grid-template-columns: 320px;
+}
+
+@media screen and (max-width: 576px) {
+    .about_container {
+        grid-template-columns: repeat(auto-fit, 300px);
     }
-    .about_data{
+
+    .about_data_right {
         justify-self: center;
-        width:400px;
+        width: 400px;
         height: 400px;
     }
-    .about_info{
+
+    .about_info {
         width: 400px;
     }
-    .about_description{
-    padding-top: 10px;
-    padding-left: 10px;
-    text-align: justify;
-    margin-bottom: 1rem ;
-    width: 400px;
+
+    .about_description {
+        padding-top: 10px;
+        padding-left: 10px;
+        margin-bottom: 1rem;
+        width: 320px;
     }
 }
- /* SMALL DEVICES */
- @media screen and (max-width: 350px){  
-    .about_container{
+
+@media screen and (max-width: 500px) {
+    .about_container {
+        grid-template-columns: repeat(auto-fit, 200px);
+    }
+
+    .about_data_left {
+        justify-self: auto;
+    }
+
+    .about_data_right {
+        justify-self: center;
+        width: 400px;
+        height: 400px;
+    }
+
+    .about_info {
+        width: 400px;
+    }
+
+    .about_description {
+        padding-top: 10px;
+        padding-left: 10px;
+        margin-bottom: 1rem;
+        width: 320px;
+    }
+
+    .about_img {
+        position: relative;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        /*box-shadow: 0px 0px 0px 15px rgb(255 77 97 /25%);*/
+
+    }
+
+    .Contact {
+        font-size: 1.125rem;
+        justify-self: center;
+
+    }
+}
+
+/* SMALL DEVICES */
+@media screen and (max-width: 350px) {
+    .about_container {
         grid-template-columns: 1fr;
     }
- }
- 
+}
