--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -136,9 +136,6 @@
 /*============ BREAKPOINTS ==============*/
 /* LARGER DEVICES */
 @media screen and (max-width: 1440px) {
-  .about_container{
-    padding-left: 15rem;
-  }
   .home_button {
     grid-template-columns: 300px 360px;
     justify-content: center;
@@ -151,9 +148,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .about_contianer{
-    padding-left: 0;
-  }
+
   .home_button {
     grid-template-columns: 300px 360px;
     justify-content: center;
